<resources>
    <string name="app_name">leavemanagement</string>
    <string name="action_settings">Settings</string>
    <string name="Login">login</string>
    <string name="admin">Admin</string>
    <string name="employee">Employee</string>
    <string name="end_date">enddate</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="save">Save</string>
    <string name="start_date">Start date</string>
    <string name="en_date">End date</string>
    <string name="reason">Reason</string>
    <string name="status">Status</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="enter_date">Enter Date</string>
    <string name="staff_id">Staff ID</string>
    <string name="request">Request</string>
    <string name="enter_name">Enter name</string>
    <string name="id">ID</string>
    <string name="employee_details">Employee details</string>
    <string name="emp_name">Emp name</string>
    <string name="empid">EmpId</string>
    <string name="contact">Contact</string>
    <string name="age">Age</string>
    <string name="emp_department">Emp department</string>
    <string name="dept">Dept</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="delete">Delete</string>
    <string name="insert">Insert</string>
    <string name="update">Update</string>
    <string name="emp_id">Emp id</string>
    <string name="View_emp_detail">To see the details entered by admin</string>
    <string name="No_Employee_details" />
    <string name="null_emp_details">No Employee Details</string>
    <string name="emp_leave_details" />
    <string name="leave_detail">Tap to view emp leave details</string>
    <string name="Emp_leave_detail">Employee Leave Detail</string>
    <string name="Leave_type">Leave type</string>
    <string name="Emp_end_date">End Date</string>
    <string name="emp_Start_date">Start date</string>
    <string name="Emp_reason">Reason</string>
    <string name="TABLE_DETAIL">CREATE TABLE</string>
    <string name="LEAVE_MANAGEMENT">CREATE TABLE</string>
    <string name="STATUS">CREATE TABLE</string>
    <string name="login">Login</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_admin_home_page">AdminHomePage</string>
    <string name="title_activity_viewing_leave_applied">ViewingLeaveApplied</string>
    <string name="dialog_message"> ClosingApp</string>
    <string name="dialog_title">ClosingAppAlert</string>
</resources>
